--- a/src/js/App.css
+++ b/src/js/App.css
@@ -38,6 +38,13 @@
   margin-top: 20px;
   padding: 20px;
 }
+/* bodychild */
+.bodychild{
+  box-shadow: 0 0 5px 2px red;
+  border-radius: 20px;
+  padding: 10px;
+  margin-top: 20px;
+}
 /* 页脚 */
 .footer{
   width: 950px;
